refactor: 修改标题logo主题色等

--- a/public/platform-config.json
+++ b/public/platform-config.json
@@ -1,13 +1,13 @@
 {
   "Version": "5.8.0",
-  "Title": "PureAdmin",
+  "Title": "vue3常用模板",
   "FixedHeader": true,
   "HiddenSideBar": false,
   "MultiTagsCache": false,
   "KeepAlive": true,
   "Locale": "zh",
   "Layout": "vertical",
-  "Theme": "light",
+  "Theme": "default",
   "DarkMode": false,
   "OverallStyle": "light",
   "Grey": false,
