--- a/public/platform-config.json
+++ b/public/platform-config.json
@@ -13,7 +13,7 @@
   "Grey": false,
   "Weak": false,
   "HideTabs": false,
-  "HideFooter": false,
+  "HideFooter": true,
   "Stretch": false,
   "SidebarStatus": true,
   "EpThemeColor": "#409EFF",
